scrollbar fix for Dale

--- a/assets/linker/styles/custom.less
+++ b/assets/linker/styles/custom.less
@@ -123,7 +123,7 @@ td {
 .movie-table-container, .people-container, .movie-list-container{
   width:100%;
   overflow-y:auto;
-  margin-left:40px;
+  padding-left:40px;
   margin-bottom:0;
   overflow-x:hidden;
 }
